# skullian

./: .gitignore  AUTHORS  Cargo.toml  Main.java  Makefile  README  README.md  TODO.md  actions.sh  analyze.sh  arcan_antlr4.graphml  arcan_junit4.graphml  arcan_pruijt.graphml  benchmark_java.md  boh.graphml  file.puml  main.py  report_cpp.md  report_java.md  report_python.md  skullian_guava.graphml  skullian_pruijt.graphml
.github/workflows/: workflow.yaml
assets/: log4rs.yml
assets/tsg/: cpp.tsg.alt  java.tsg  java.tsg.alt  java.tsg.old  python.tsg.alt
doc/: index.md
doc/sections/access/: cli.md  index.md
docs/: DEVELOPMENT.md  README.md
examples/: main.cpp
examples/samples/: cpp.tsg  java.tsg  java.tsg.bak  main.cpp  main.java  main.sgr  main2.java
public/: data.json  index.html  package.json
public/public/: index.html  manifest.json
public/public/js/: data.json
public/src/: App.jsx  index.js
public/src/components/: DepGraph.jsx
public/src/pages/: Home.jsx
src/: cli.rs  discovery.rs  graph.rs  language.rs  lib.rs  main.rs
src/graph/: dg.rs  lavatrice.rs  sg.rs  ts.rs
src/graph/dg/: defkind.rs  dep_graph.rs  dep_graph_edge.rs  dep_graph_node.rs  edge_label.rs  fun.rs  references.rs  refkind.rs  synchro.rs  testing.rs
src/language/: grammar.rs  mod.rs  name.rs  recognition.rs  tsg.rs
src/tests/: mod.rs
src/tests/language/: grammar.rs  mod.rs  recognition.rs
tests/: skullian.rs
tests/graph/: mod.rs  ts.rs
tests/graph/ts/: from_file_name.rs  from_file_name_and_language_name.rs  from_text_and_language_name.rs  ok.cpp  tree_to_sexp.rs
tests/language/: grammar.rs  mod.rs  name.rs
thesis/: thesis.tex
thesis/chapters/: tree-sitter.tex
thesis/reports/dotj/: code.txt  tests.txt  total.txt
thesis/reports/examples/: examples.txt
(+235 files in other folders)
