[package]
name = "skullian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter="*"
tree-sitter-java="*"
tree-sitter-c="*"
tree-sitter-cpp="*"
tree-sitter-rust="*"
tree-sitter-stack-graphs="*"