[package]
name = "skullian"
description = "Arcan DepGraph Generator with TS and SG"
version = "0.1.0"
edition = "2021"
authors = ["Refolli Francesco <f.refolli@campus.unimib.it>"]
readme = "README.md"
repository = "https://github.com/frefolli/skullian/"
license-file = "LICENSE"
include = ["/assets", "/src", "/docs", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter="*"
tree-sitter-java="*"
tree-sitter-c="*"
tree-sitter-cpp="*"
tree-sitter-rust="*"
tree-sitter-python="*"
stack-graphs="*"
tree-sitter-stack-graphs="*"
argparse="*"
walkdir="*"
serde_json="*"
log="*"
log4rs="*"
indicatif="*"
serde="*"
serde_yaml="*"
smallvec = "*"
time = ">=0.2.23"
